--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@
 }
 
 .frame .text-wrapper {
-    left: 52px;
+    left: 40px;
     color: #3b3b3b;
     position: absolute;
     top: 11px;
@@ -116,6 +116,9 @@
     letter-spacing: 0;
     line-height: normal;
     white-space: nowrap;
+    width: 80px;
+    height: 25px;
+    background: transparent;
 }
 
 
